makko/media/koel/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sonyx
  labels:
    app: sonyx
spec:
  revisionHistoryLimit: 1
  replicas: 1
  selector:
    matchLabels:
      app: sonyx
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: sonyx
    spec:
      containers:
      - image: phanan/koel:7.2.2
        name: sonyx
        ports:
        - containerPort: 80
        volumeMounts:
        - name: music
          mountPath: /music
        - name: covers
          mountPath: /var/www/html/public/img/covers
        - name: search-index
          mountPath: /var/www/html/storage/search-indexes
        resources:
          limits:
            cpu: "1"
            memory: 768Mi
            ephemeral-storage: 2Gi
          requests:
            cpu: 200m
            memory: 256Mi
      - image: postgres:13
        name: database
        ports:
        - containerPort: 5432
        volumeMounts:
        - name: db-data
          mountPath: /var/lib/postgresql/data
        resources:
          limits:
            cpu: "1"
            memory: 512Mi
            ephemeral-storage: 1Gi
          requests:
            cpu: 100m
            memory: 128Mi
      volumes:
      - name: music
        persistentVolumeClaim:
          claimName: sonyx-music-pvc
      - name: covers
        persistentVolumeClaim:
          claimName: sonyx-covers-pvc
      - name: search-index
        persistentVolumeClaim:
          claimName: sonyx-search-index-pvc
      - name: db-data
        persistentVolumeClaim:
          claimName: database-data-pvc
